# dev-project

./: .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .secrets.baseline  FRONTEND_IMPROVEMENTS.md  GITIGNORE_UPDATE.md  PRETTIER_SUCCESS.md  PRE_COMMIT_GUIDE.md  PRE_COMMIT_SUCCESS.md  PROJECT_COMPLETE.md  README.md  docker-compose.yaml  rss.env.example  setup-precommit.ps1
backend/: BACKEND_IMPROVEMENTS.md  Dockerfile  README.md  STATUS_ENDPOINTS.md  alembic.ini  check_column.py  check_db_connection.py  pyproject.toml  requirements.txt  requirements_temp.txt  structure.txt
backend/alembic/: env.py
backend/alembic/versions/: d32797f05ef7_add_favicon_to_feed.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: __init__.py  articles.py  docs.py  feeds.py  folders.py  metrics.py  settings.py  status.py
backend/app/core/: __init__.py  config.py
backend/app/db/: crud.py  database.py  models.py
backend/app/schemas/: __init__.py  article.py  feed.py  folder.py  settings.py
backend/app/services/: background_tasks.py  feed_parser.py
backend/app/tests/: conftest.py
backend/app/tests/api/v1/endpoints/: test_feeds.py  test_folders.py  test_status.py
backend/app/tests/db/: test_article_model.py
backend/app/tests/schemas/: test_article_schema.py
frontend/: .env.example  App.tsx  AppContext.tsx  AppReducer.ts  Dockerfile  README.md  constants.ts  index.html  metadata.json  nginx.conf  package-lock.json  types.ts  (+3 more)
(+163 files in other folders)
