[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for RSS feed management"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "psycopg2-binary",
    "pydantic-settings>=2.9.1",
    "httpx>=0.28.1",
    "feedparser>=6.0.11",
]

[tool.uv]
