[project]
name = "fluxreader-backend"
version = "0.1.0"
description = "FastAPI backend for FluxReader RSS feed management"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "psycopg2-binary",
    "pydantic-settings>=2.9.1",
    "httpx>=0.28.1",
    "feedparser>=6.0.11",
    "psutils>=3.3.10",
]

[tool.uv]
